--- a/apps/base/homepage/clusterrole.yaml
+++ b/apps/base/homepage/clusterrole.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: homepage
+  namespace: homepage
   labels:
     app.kubernetes.io/name: homepage
 rules:
@@ -50,6 +51,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: homepage
+  namespace: homepage
   labels:
     app.kubernetes.io/name: homepage
 roleRef:
@@ -59,4 +61,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: homepage
+
     namespace: default
