--- a/apps/base/homepage/secret.yaml
+++ b/apps/base/homepage/secret.yaml
@@ -3,8 +3,9 @@ kind: Secret
 type: kubernetes.io/service-account-token
 metadata:
   name: homepage
-  namespace: default
+  namespace: homepage
   labels:
     app.kubernetes.io/name: homepage
   annotations:
+
     kubernetes.io/service-account.name: homepage
