--- a/apps/base/homepage/service.yaml
+++ b/apps/base/homepage/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: homepage
-  namespace: default
+  namespace: homepage
   labels:
     app.kubernetes.io/name: homepage
   annotations:
@@ -14,4 +14,5 @@ spec:
       protocol: TCP
       name: http
   selector:
+
     app.kubernetes.io/name: homepage
