--- a/apps/base/homepage/serviceaccount.yaml
+++ b/apps/base/homepage/serviceaccount.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: homepage
-  namespace: default
+  namespace: homepage
   labels:
     app.kubernetes.io/name: homepage
 secrets:
+
   - name: homepage
