--- a/apps/base/homepage/service.yaml
+++ b/apps/base/homepage/service.yaml
@@ -10,10 +10,11 @@ spec:
   type: ClusterIP
   ports:
     - port: 9090
-      targetPort: http
+      targetPort: 9090
       protocol: TCP
       name: http
   selector:
 
     app.kubernetes.io/name: homepage
+
 
