--- a/apps/base/homepage/service.yaml
+++ b/apps/base/homepage/service.yaml
@@ -10,11 +10,12 @@ spec:
   type: ClusterIP
   ports:
     - port: 9090
-      targetPort: 9090
+      targetPort: http
       protocol: TCP
       name: http
   selector:
 
     app.kubernetes.io/name: homepage
+
 
 
