--- a/apps/base/homepage/deployment.yaml
+++ b/apps/base/homepage/deployment.yaml
@@ -18,11 +18,17 @@ spec:
       labels:
         app.kubernetes.io/name: homepage
     spec:
+      securityContext:
+        fsGroup: 1000
+        runAsUser: 1000
+        runAsGroup: 1000
       serviceAccountName: homepage
       automountServiceAccountToken: true
       dnsPolicy: ClusterFirst
       enableServiceLinks: true
       containers:
+          securityContext:
+            allowPrivilegeEscalation: False
         - name: homepage
           image: "ghcr.io/gethomepage/homepage:v1.5.0"
           imagePullPolicy: Always
@@ -67,5 +73,6 @@ spec:
         - name: logs
 
           emptyDir: {}
+
 
 
