--- a/apps/base/homepage/deployment.yaml
+++ b/apps/base/homepage/deployment.yaml
@@ -22,10 +22,10 @@ spec:
       automountServiceAccountToken: true
       dnsPolicy: ClusterFirst
       enableServiceLinks: true
-      securityContext:
-        fsGroup: 1000
-        runAsUser: 1000
-        runAsGroup: 1000
+      #securityContext:
+        #fsGroup: 1000
+        #runAsUser: 1000
+        #runAsGroup: 1000
       containers:
         - name: homepage
           image: "ghcr.io/gethomepage/homepage:v1.5.0"
@@ -37,8 +37,8 @@ spec:
             - name: http
               containerPort: 3000
               protocol: TCP
-          securityContext:
-              allowPrivilegeEscalation: False
+          #securityContext:
+              #allowPrivilegeEscalation: False
           volumeMounts:
             - mountPath: /app/config/custom.js
               name: homepage-config
@@ -73,6 +73,7 @@ spec:
         - name: logs
 
           emptyDir: {}
+
 
 
 
