--- a/apps/staging/mealie/cloudflare.yaml
+++ b/apps/staging/mealie/cloudflare.yaml
@@ -77,7 +77,7 @@ data:
     no-autoupdate: true
 
     ingress:
-    - hostname: ldpi.mischavandenburg.net
+    - hostname: ldpi.crpruett.net
       service: http://mealie:9000
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
