--- a/apps/staging/mealie/kustomization.yaml
+++ b/apps/staging/mealie/kustomization.yaml
@@ -1,11 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - deployment.yaml
-  - namespace.yaml
-  - clusterrole.yaml
-  - configmap.yaml
-  - secret.yaml
-  - service.yaml
-  - serviceaccount.yaml
-  - ingress.yaml
+  - ../../base/mealie
+  - cloudflare.yaml
