--- a/apps/staging/mealie/test-secret.yaml
+++ b/apps/staging/mealie/test-secret.yaml
@@ -5,6 +5,7 @@ data:
 kind: Secret
 metadata:
     name: test-secret
+    namespace: flux-system
 sops:
     age:
         - recipient: age1r2y0yv7uutp87hv2kv725jk42sed3jucnkczapay20mvgcj24y8szx54dm
