--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -18,12 +18,18 @@ spec:
     crds: Create
   upgrade:
     crds: CreateReplace
-  driftDetection:
-    mode: enabled
-    ignore:
-      - paths: ["/metadata/annotations/prometheus-operator-validated"]
-        target:
-          kind: PrometheusRule
-  values:
-    grafana:
-      adminPassword: ginrai
+    driftDetection:
+      mode: enable
+      ignore:
+        - paths: ["/metadata/annotations/prometheus-operator-validated"]
+          target:
+            kind: PrometheusRule
+    values:
+      grafana:
+        adminPassword: ginrai
+ 				ingress:
+					enabled: true
+					ingressClassName: traefik
+					hosts:
+						- grs.crpruett.net
+					tls: []	
