--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -19,17 +19,11 @@ spec:
   upgrade:
     crds: CreateReplace
 driftDetection:
-  mode: enable
-  ignore:
-    - paths: ["/metadata/annotations/prometheus-operator-validated"]
-      target:
-        kind: PrometheusRule
-values:
+    mode: enabled
+    ignore:
+      - paths: ["/metadata/annotations/prometheus-operator-validated"]
+        target:
+          kind: PrometheusRule
+  values:
     grafana:
       adminPassword: ginrai
- 	  ingress:
-	    enabled: true
-     	ingressClassName: traefik
-		hosts:
-		  - grs.crpruett.net
-		tls: []	
