--- a/apps/base/homepage/service.yaml
+++ b/apps/base/homepage/service.yaml
@@ -10,12 +10,13 @@ spec:
   type: ClusterIP
   ports:
     - port: 4000
-      targetPort: 4000
+      targetPort: http
       protocol: TCP
-     # name: http
+      name: http
   selector:
 
     app.kubernetes.io/name: homepage
+
 
 
 
