--- a/apps/base/homepage/deployment.yaml
+++ b/apps/base/homepage/deployment.yaml
@@ -34,9 +34,9 @@ spec:
             - name: HOMEPAGE_ALLOWED_HOSTS
               value: "localhost:4000,127.0.0.1:4000" # required, may need port. See gethomepage.dev/installation/#homepage_allowed_hosts
           ports:
-            #- name: http
-              containerPort: 4000
-              #protocol: TCP
+            - name: http
+              containerPort: 3000
+              protocol: TCP
           #securityContext:
               #allowPrivilegeEscalation: False
           volumeMounts:
@@ -73,6 +73,7 @@ spec:
         - name: logs
 
           emptyDir: {}
+
 
 
 
