--- a/apps/base/homarr/kustomization.yaml
+++ b/apps/base/homarr/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - homarr-values.yaml
-  - homarr-service.yaml
+  - homarrservice.yaml
   - namespace.yaml
