--- a/apps/staging/mealie/cloudflare.yaml
+++ b/apps/staging/mealie/cloudflare.yaml
@@ -79,8 +79,8 @@ data:
     no-autoupdate: true
 
     ingress:
-    - hostname: ldpi.crpruett.net
-      service: http://mealie:9000
+   # - hostname: ldpi.crpruett.net
+   #   service: http://mealie:9000
     - hostname: mealie.crpruett.net
       service: http://mealie:9000
     - hostname: homepage.crpruett.net
