--- a/apps/base/homepage/deployment.yaml
+++ b/apps/base/homepage/deployment.yaml
@@ -32,7 +32,7 @@ spec:
           imagePullPolicy: Always
           env:
             - name: HOMEPAGE_ALLOWED_HOSTS
-              value: "localhost:4000,127.0.0.1:4000" # required, may need port. See gethomepage.dev/installation/#homepage_allowed_hosts
+              value: "localhost:4000,127.0.0.1:4000, homepage.crpruett.net" # required, may need port. See gethomepage.dev/installation/#homepage_allowed_hosts
           ports:
             - name: http
               containerPort: 3000
@@ -73,6 +73,7 @@ spec:
         - name: logs
 
           emptyDir: {}
+
 
 
 
