--- a/apps/staging/mealie/cloudflare.yaml
+++ b/apps/staging/mealie/cloudflare.yaml
@@ -82,7 +82,7 @@ data:
     - hostname: mealie.crpruett.net
       service: http://mealie:9000
     - hostname: homepage.crpruett.net
-      service: http://homepage.homepage.svc.cluster.local:3000
+      service: service: http://homepage:3000
       
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
