--- a/infrastructure/controllers/base/cloudflared/production/cloudflare.yaml
+++ b/infrastructure/controllers/base/cloudflared/production/cloudflare.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cloudflared
-  namespace: mealie
+  namespace: cloudflared
 spec:
   selector:
     matchLabels:
@@ -65,7 +65,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cloudflared
-  namespace: mealie
+  namespace: cloudflared
 data:
   config.yaml: |
     # Name of the tunnel you want to run
