--- a/infrastructure/controllers/base/cloudflared/staging/cloudflare.yaml
+++ b/infrastructure/controllers/base/cloudflared/staging/cloudflare.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cloudflared
-  namespace: mealie
+  namespace: cloudflared
 spec:
   selector:
     matchLabels:
@@ -65,7 +65,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cloudflared
-  namespace: mealie
+  namespace: cloudflared
 data:
   config.yaml: |
     # Name of the tunnel you want to run
@@ -80,7 +80,7 @@ data:
 
     ingress:
     - hostname: mealie.crpruett.net
-      service: http://mealie:9000
+      service: http://mealie.mealie.svc.cluster.local:9000
     - hostname: homepage.crpruett.net
       service: http://homepage.homepage.svc.cluster.local:4000
       
