--- a/infrastructure/controllers/base/cloudflared/production/cloudflare.yaml
+++ b/infrastructure/controllers/base/cloudflared/production/cloudflare.yaml
@@ -83,6 +83,8 @@ data:
       service: http://mealie.mealie.svc.cluster.local:9000
     - hostname: homepage.crpruett.net
       service: http://homepage.homepage.svc.cluster.local:4000
+    - hostname: grafana.crpruett.net
+      service: http://monitoring.grafana-loadbalancer.svc.cluster.local:3000
       
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
