--- a/infrastructure/controllers/base/cloudflared/production/cloudflare.yaml
+++ b/infrastructure/controllers/base/cloudflared/production/cloudflare.yaml
@@ -84,7 +84,7 @@ data:
     - hostname: homepage.crpruett.net
       service: http://homepage.homepage.svc.cluster.local:4000
     - hostname: grafana.crpruett.net
-      service: http://kube-prometheus-stack-grafana.monitoring.svc.cluster.local
+      service: http://kube-prometheus-stack-grafana.monitoring.svc.cluster.local:80
       
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
