--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -27,7 +27,7 @@ spec:
   values:
     grafana:
       adminPassword: ginrai
-      grafana.ini:
+      grafanaIni:
         server:
           domain: grafana.crpruett.net
           root_url: https://grafana.crpruett.net
