--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -30,7 +30,7 @@ spec:
       grafana.Ini:
         server:
           domain: grafana.crpruett.net
-          root_url: %(protocol)s://%(domain)s:%(http_port)s/grafana/ #https://grafana.crpruett.net
+          root_url: https://grafana.crpruett.net
           serve_from_sub_path: true
      # ingress:
         #enabled: true
