--- a/infrastructure/controllers/base/cloudflared/production/cloudflare.yaml
+++ b/infrastructure/controllers/base/cloudflared/production/cloudflare.yaml
@@ -78,6 +78,9 @@ data:
     metrics: 0.0.0.0:2000
     no-autoupdate: true
 
+    protocol: http2
+    no-quic: true
+
     ingress:
     - hostname: mealie.crpruett.net
       service: http://mealie.mealie.svc.cluster.local:9000
@@ -85,9 +88,6 @@ data:
       service: http://homepage.homepage.svc.cluster.local:4000
     - hostname: grafana.crpruett.net
       service: http://kube-prometheus-stack-grafana.monitoring.svc.cluster.local:80
-      originRequest:
-        noTLSVerify: true
-        disableChunkedEncoding: true
       
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
