--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -27,10 +27,11 @@ spec:
   values:
     grafana:
       adminPassword: ginrai
-      #grafana.Ini:
-        #server:
-          #domain: grafana.crpruett.net
-          #root_url: https://grafana.crpruett.net
+      grafana.ini:
+        server:
+          domain: grafana.crpruett.net
+          root_url: https://grafana.crpruett.net\
+          serve_from_sub_path: false
      # ingress:
         #enabled: true
         #ingressClassName: traefik
