--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -30,7 +30,7 @@ spec:
       grafana.ini:
         server:
           domain: grafana.crpruett.net
-          root_url: https://grafana.crpruett.net\
+          root_url: https://grafana.crpruett.net
           serve_from_sub_path: false
      # ingress:
         #enabled: true
