--- a/monitoring/controllers/base/kube-loki/release.yaml
+++ b/monitoring/controllers/base/kube-loki/release.yaml
@@ -1,13 +1,13 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: kube-loki-grafana
+  name: loki
   namespace: monitoring
 spec:
   interval: 30m
   chart:
     spec:
-      chart: kube-loki-grafana
+      chart: loki
       version: "5.x.x" #Could use 66.x, and flux will only update based upon the major version. 66.* works too. 
       sourceRef:
         kind: HelmRepository
