--- a/monitoring/controllers/base/kube-loki/repository.yaml
+++ b/monitoring/controllers/base/kube-loki/repository.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: kube-loki
+  name: loki
   namespace: monitoring
 spec:
   interval: 24h
