--- a/monitoring/controllers/base/kube-loki/release.yaml
+++ b/monitoring/controllers/base/kube-loki/release.yaml
@@ -4,24 +4,36 @@ metadata:
   name: loki
   namespace: monitoring
 spec:
-  interval: 30m
+  interval: 5m
   chart:
     spec:
       chart: loki
-      version: "5.x.x" #Could use 66.x, and flux will only update based upon the major version. 66.* works too. 
+      version: 5.42.0 # Use latest stable from https://github.com/grafana/helm-charts/tree/main/charts/loki
       sourceRef:
         kind: HelmRepository
         name: grafana
         namespace: flux-system
-      interval: 12h
   values:
+    mode: monolithic
     persistence:
       enabled: true
       size: 10Gi
-      storageClassName: "standard"
-     # ingress:
-        #enabled: true
-        #ingressClassName: traefik
-       # hosts:
-         # - grs.crpruett.net
-        #tls: []
+    config:
+      schema_config:
+        configs:
+          - from: 2023-01-01
+            store: boltdb-shipper
+            object_store: filesystem
+            schema: v13
+            index:
+              prefix: index_
+              period: 24h
+      storage_config:
+        boltdb_shipper:
+          active_index_directory: /var/loki/index
+          shared_store: filesystem
+        filesystem:
+          directory: /var/loki/chunks
+    serviceMonitor:
+      enabled: true
+
