--- a/monitoring/controllers/base/kube-loki/grafana-agent.yaml
+++ b/monitoring/controllers/base/kube-loki/grafana-agent.yaml
@@ -1,8 +1,8 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: grafana-agent
-  namespace: observability
+  namespace: monitoring
 spec:
   interval: 5m
   chart:
