--- a/monitoring/controllers/base/kube-loki/kustomization.yaml
+++ b/monitoring/controllers/base/kube-loki/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - promtail-release.yaml
-  - repository.yaml
+  - grafana-agent.yaml
   - release.yaml
   #- service.yaml
