--- a/.github/workflows/yamllint.yaml
+++ b/.github/workflows/yamllint.yaml
@@ -1,2 +1,9 @@
-- name: YAML Lint
-  uses: ibiqlik/action-yamllint@v3.1.1
+name: Yaml Lint
+on: [push]  # yamllint disable-line rule:truthy
+jobs:
+  lintAllTheThings:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: yaml-lint
+        uses: ibiqlik/action-yamllint@v3
