--- a/.github/workflows/yamllint.yaml
+++ b/.github/workflows/yamllint.yaml
@@ -9,10 +9,10 @@ jobs:
       - name: yaml-lint
         uses: ibiqlik/action-yamllint@v3
 
-      - run: echo ${{ steps.yaml-lint.outputs.logfile }}
+      - run: echo ".yamllog.log"
 
       - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: yamllint-logfile
-          path: ${{ steps.yaml-lint.outputs.logfile }}
+          path: ./yamllog.log
