--- a/.github/workflows/yamllint.yaml
+++ b/.github/workflows/yamllint.yaml
@@ -1,5 +1,7 @@
 ---
 name: Yaml Lint
+rules:
+  indentation: disable
 on: [push]  # yamllint disable-line rule:truthy
 jobs:
   lintAllTheThings:
@@ -8,11 +10,3 @@ jobs:
       - uses: actions/checkout@v3
       - name: yaml-lint
         uses: ibiqlik/action-yamllint@v3
-
-      - run: echo ".yamllog.log"
-
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: yamllint-logfile
-          path: ./yamllog.log
