--- a/clusters/staging/flux-system/gotk-components.yaml
+++ b/clusters/staging/flux-system/gotk-components.yaml
@@ -4525,6 +4525,7 @@ spec:
             memory: 64Mi
         securityContext:
           allowPrivilegeEscalation: false
+          runAsUser: 1000
           capabilities:
             drop:
             - ALL
@@ -6005,6 +6006,7 @@ spec:
             memory: 64Mi
         securityContext:
           allowPrivilegeEscalation: false
+          runAsUser: 1000
           capabilities:
             drop:
             - ALL
@@ -8742,6 +8744,7 @@ spec:
             memory: 64Mi
         securityContext:
           allowPrivilegeEscalation: false
+          runAsUser: 1000
           capabilities:
             drop:
             - ALL
@@ -10174,6 +10177,7 @@ spec:
             memory: 64Mi
         securityContext:
           allowPrivilegeEscalation: false
+          runAsUser: 1000
           capabilities:
             drop:
             - ALL
