--- a/infrastructure/controllers/base/cloudflared/staging/cloudflare.yaml
+++ b/infrastructure/controllers/base/cloudflared/staging/cloudflare.yaml
@@ -79,9 +79,9 @@ data:
     no-autoupdate: true
 
     ingress:
-    - hostname: mealie.crpruett.net
+    - hostname: mealie-staging.crpruett.net
       service: http://mealie.mealie.svc.cluster.local:9000
-    - hostname: homepage.crpruett.net
+    - hostname: homepage-staging.crpruett.net
       service: http://homepage.homepage.svc.cluster.local:4000
       
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
