--- a/infrastructure/controllers/base/cloudflared/staging/cloudflare.yaml
+++ b/infrastructure/controllers/base/cloudflared/staging/cloudflare.yaml
@@ -70,7 +70,7 @@ data:
   config.yaml: |
     # Name of the tunnel you want to run
     
-    tunnel: ldpi
+    tunnel: ldpi-staging
 
     credentials-file: /etc/cloudflared/creds/credentials.json
 
