--- a/apps/staging/mealie/kustomization.yaml
+++ b/apps/staging/mealie/kustomization.yaml
@@ -2,3 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/mealie
+images: 
+  - ghcr.io/mealie-recipes/mealie
+  newTag: v3.4.0
