--- a/apps/staging/mealie/kustomization.yaml
+++ b/apps/staging/mealie/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 resources:
   - ../../base/mealie
 images: 
-  - ghcr.io/mealie-recipes/mealie
+  - name: ghcr.io/mealie-recipes/mealie
   newTag: v3.4.0
