--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "ignorePaths": [
-    "**/base/**"
+    "**/base/**",
+    "**/flux-system/**"
   ],
   "kubernetes": {
     "fileMatch": [
