--- a/renovate.json
+++ b/renovate.json
@@ -4,8 +4,20 @@
     "**/base/**",
     "**/flux-system/**"
   ],
-  "matchUpdateTypes": ["patch","minor"],
-  "matchUpdateTypes": ["major"],
+  "packageRules": [
+    {
+      "description": "Automerge patch/minor updates after CI passes",
+      "matchUpdateTypes": ["patch","minor"],
+      "automerge": true,
+      "automergeType": "pr",
+      "platformAutomerge": true
+    },
+    {
+      "description": "Don't automerge major updates",
+      "matchUpdateTypes": ["major"],
+      "automerge": false
+    }
+  ],
   "kubernetes": {
     "fileMatch": [
       "\\.yaml$"
