--- a/.github/workflows/ContinuousInt.yaml
+++ b/.github/workflows/ContinuousInt.yaml
@@ -7,11 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
       - name: 'Yamllint'
-        uses: karancode/yamllint-github-action@master
+        uses: karancode/yamllint-github-action@v1.0.2
         with:
-          yamllint_file_or_dir: './clusters/base/'
+          yamllint_file_or_dir: |
+            ./clusters/base/
+            ./.github/workflows
           yamllint_strict: false
           yamllint_comment: true
         env:
