--- a/.github/workflows/ContinuousInt.yaml
+++ b/.github/workflows/ContinuousInt.yaml
@@ -1,20 +1,22 @@
-name: 'Yamllint GitHub Actions'
+name: Yamllint
+
 on:
-  - pull_request
+  pull_request:
+
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   yamllint:
-    name: 'Yamllint'
     runs-on: ubuntu-latest
+
     steps:
-      - name: 'Checkout'
+      - name: Checkout
         uses: actions/checkout@v4
-      - name: 'Yamllint'
-        uses: karancode/yamllint-github-action@v1.0.2
+
+      - name: Run yamllint
+        uses: ibiqlik/action-yamllint@v3
         with:
-          yamllint_file_or_dir: |
-            ./clusters/base/
-            ./.github/workflows
-          yamllint_strict: false
-          yamllint_comment: true
-        env:
-          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          config_file: .yamllint
+          file_or_dir: .
