--- a/.github/workflows/ContinuousInt.yaml
+++ b/.github/workflows/ContinuousInt.yaml
@@ -1,22 +1,33 @@
-name: Yamllint
-
+---
+name: linting
 on:
-  pull_request:
-
-permissions:
-  contents: read
-  pull-requests: write
+  - pull_request
 
 jobs:
-  yamllint:
-    runs-on: ubuntu-latest
-
+  Markdownlint:
+    runs-on: 'ubuntu-latest'
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+      - name: Markdown Lint
+        uses: actionshub/markdownlint@v1.0.0
 
-      - name: Run yamllint
-        uses: ibiqlik/action-yamllint@v3
+  Dockerfilelint:
+    runs-on: 'ubuntu-latest'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Dockerfile Lint
+        uses: burdzwastaken/hadolint-action@1.6.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          HADOLINT_ACTION_DOCKERFILE_FOLDER: .
+
+  Yamllint:
+    runs-on: 'ubuntu-latest'
+    steps:
+      - uses: actions/checkout@v3
+      - name: YAML Lint
+        uses: karancode/yamllint-github-action@master
         with:
-          config_file: .yamllint
-          file_or_dir: .
+          yamllint_comment: true
+        env:
+          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
