--- a/.github/workflows/ContinuousInt.yaml
+++ b/.github/workflows/ContinuousInt.yaml
@@ -1,33 +1,14 @@
 ---
-name: linting
-on:
-  - pull_request
+on: push  # yamllint disable-line rule:truthy
 
 jobs:
-  Markdownlint:
-    runs-on: 'ubuntu-latest'
+  lint:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Markdown Lint
-        uses: actionshub/markdownlint@v1.0.0
 
-  Dockerfilelint:
-    runs-on: 'ubuntu-latest'
-    steps:
-      - uses: actions/checkout@v3
-      - name: Dockerfile Lint
-        uses: burdzwastaken/hadolint-action@1.6.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          HADOLINT_ACTION_DOCKERFILE_FOLDER: .
+      - name: Install yamllint
+        run: pip install yamllint
 
-  Yamllint:
-    runs-on: 'ubuntu-latest'
-    steps:
-      - uses: actions/checkout@v3
-      - name: YAML Lint
-        uses: karancode/yamllint-github-action@master
-        with:
-          yamllint_comment: true
-        env:
-          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Lint YAML files
+        run: yamllint .
