--- a/.github/workflows/ContinuousInt.yaml
+++ b/.github/workflows/ContinuousInt.yaml
@@ -11,4 +11,4 @@ jobs:
         run: pip install yamllint
 
       - name: Lint YAML files
-        run: yamllint .
+        run: yamllint -c ./yamllint ./apps/base/homepage/ingress.yaml
