--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,7 @@
       "description": "Automerge patch/minor updates after CI passes",
       "matchUpdateTypes": ["patch","minor"],
       "automerge": true,
-      "automergeType": "pr",
+      "automergeType": "pr"
     },
     {
       "description": "Don't automerge major updates",
