--- a/apps/staging/homepage/kustomization.yaml
+++ b/apps/staging/homepage/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: homepage
 resources: 
   - ../../base/homepage/
+  - configmap.yaml
 images: 
   - name: ghcr.io/gethomepage/homepage
     newTag: v1.8.0
