--- a/apps/base/homepage/configmap.yaml
+++ b/apps/base/homepage/configmap.yaml
@@ -30,6 +30,12 @@ data:
             href: https://mealie.crpruett.net
             description: I love food
             icon: mealie
+
+        - Synology:
+            href: https://crpruett.us1.quickconnect.to/#/signin
+            description: Synology NAS DS225+
+            icon: si-synology
+            
     - Consuming:
         - Destructoid:
             href: https://www.destructoid.com/
@@ -83,6 +89,7 @@ data:
         target: _blank
 
   docker.yaml: ""
+
 
 
 
