--- a/infrastructure/controllers/production/synology-csi/kustomization.yaml
+++ b/infrastructure/controllers/production/synology-csi/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - renovate
-  - cloudflared
-  - synology-csi
+  - namespace.yaml
+  - test-secret.yaml
+  - ../../base/synology-csi
