--- a/infrastructure/controllers/base/cloudflared/staging/cloudflare.yaml
+++ b/infrastructure/controllers/base/cloudflared/staging/cloudflare.yaml
@@ -83,7 +83,11 @@ data:
       service: http://mealie.mealie.svc.cluster.local:9000
     - hostname: homepage-staging.crpruett.net
       service: http://homepage.homepage.svc.cluster.local:4000
-      
+    - hostname: grafana-staging.crpruett.net
+      service: http://kube-prometheus-stack-grafana.monitoring.svc.cluster.local:80
+      originRequest:
+        httpHostHeader: grafana-staging.crpruett.net
+        
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
     # in the connection from cloudflared to your local service, not from the internet to cloudflared.
