--- a/infrastructure/controllers/base/cloudflared/staging/cloudflare.yaml
+++ b/infrastructure/controllers/base/cloudflared/staging/cloudflare.yaml
@@ -77,7 +77,9 @@ data:
     # Serves the metrics server under /metrics and the readiness server under /ready
     metrics: 0.0.0.0:2000
     no-autoupdate: true
-
+    no-quic: true
+    http2-origin: false
+    
     ingress:
     - hostname: mealie-staging.crpruett.net
       service: http://mealie.mealie.svc.cluster.local:9000
