--- a/infrastructure/controllers/base/cilium/release.yaml
+++ b/infrastructure/controllers/base/cilium/release.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: kube-system
 
 spec:
-  releasename: cilium
+  releaseName: cilium
   interval: 15m
   chart:
     spec:
@@ -16,6 +16,6 @@ spec:
         name: cilium
         namespace: kube-system
 
-  valeusFrom:
-    - kind: Configmap
+  valuesFrom:
+    - kind: ConfigMap
       name: cilium-values
