--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -32,6 +32,28 @@ spec:
           domain: grafana.crpruett.net
           root_url: https://grafana.crpruett.net
           serve_from_sub_path: false
+    alertmanager:
+      config:
+        global:
+          resolve_timeout: 5m
+
+        route:
+          receiver: pagerduty
+          group_by: ['alertname', 'cluster', 'namespace']
+          group_wait: 30s
+          group_interval: 5m
+          repeat_interval: 4h
+
+        receivers:
+          - name: pagerduty
+            pagerduty_configs:
+              - routing_key: "e47a00f05e334600d0b88294ea28683d"
+                severity: '{{ .CommonLabels.severity | default "error" }}'
+                description: '{{ .CommonAnnotations.summary }}'
+                details:
+                  cluster: '{{ .CommonLabels.cluster }}'
+                  namespace: '{{ .CommonLabels.namespace }}'
+                  alertname: '{{ .CommonLabels.alertname }}'
      # ingress:
         #enabled: true
         #ingressClassName: traefik
