--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -49,7 +49,7 @@ spec:
         receivers:
           - name: pagerduty
             pagerduty_configs:
-              - service_key: "e47a00f05e334600d0b88294ea28683d"
+              - service_key: "e47a00f05e334600d0b88294ea28683d" #This needs to be added to a secret
                 send_resolved: true
      # ingress:
         #enabled: true
