--- a/infrastructure/controllers/base/cilium/values.yaml
+++ b/infrastructure/controllers/base/cilium/values.yaml
@@ -2115,7 +2115,7 @@ readinessProbe:
 # @schema@
 # type: [string, boolean]
 # @schema@
-kubeProxyReplacement: "false"
+kubeProxyReplacement: "true"
 # -- healthz server bind address for the kube-proxy replacement.
 # To enable set the value to '0.0.0.0:10256' for all ipv4
 # addresses and this '[::]:10256' for all ipv6 addresses.
